--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,7 +9,8 @@ $medium-font-size: 17px;
 $large-font-size: 19px;
 
 $font-sizes: (
-    xxxxl: 4.5rem,
+    xxxxxl: 7rem,
+    xxxxl: 4rem,
     xxxl: 2.5rem,
     xxl: 2rem,
     xl: 1.875rem,
